[package]
name = "openbazaar3"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1.67"
env_logger = "0.10"
futures = "0.3.27"
libp2p = { version ="0.51.1", features = ["tokio", "async-std", "dns", "kad",  "mplex", "noise", "tcp", "websocket", "yamux", "request-response", "macros"] }
either = "1.8.1"
libp2p-swarm-derive = "0.32.0"
anyhow = "1.0.70"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs", "sync"] }
actix-web = "4.3.1"
tracing = "0.1"
tracing-subscriber = "0.3.1"
axum = "0.6.12"
unicode-normalization = "0.1.9"
bdk = { git = "https://github.com/hoffmabc/bdk", version = "1.0.0-alpha.0", features = ["keys-bip39"]}

bdk_electrum = { git = "https://github.com/hoffmabc/bdk", version="0.2.0"}
bdk_file_store = {  git = "https://github.com/hoffmabc/bdk", version="0.1.0"}
bdk_chain = { git = "https://github.com/hoffmabc/bdk", version="0.4"}
bdk_esplora = { git = "https://github.com/hoffmabc/bdk", version="0.2.0"}
sled = "0.34.7"
bincode = "1.3.3"
