[package]
name = "openbazaar-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openbazaar-lib = { path = "../openbazaar-lib" }
anyhow = "1.0.70"
structopt = "0.3.26"
dialoguer = "0.10.3"
uuid = "1.3.0"
