[package]
name = "openbazaar-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs", "sync"] }
anyhow = "1.0.70"
sled = "0.34.7"
tonic = "0.9.1"
prost = "0.11.8"
thiserror = "1.0.40"
bincode = "1.3.3"
serde = { version = "1.0.158", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.4"
